parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> open_client
Rule 2     statement -> open_server
Rule 3     statement -> send
Rule 4     statement -> close_client
Rule 5     statement -> accept
Rule 6     statement -> close_server
Rule 7     statement -> close
Rule 8     open_client -> OPEN_CLIENT
Rule 9     open_server -> OPEN_SERVER
Rule 10    send -> SEND
Rule 11    close_client -> CLOSE_CLIENT
Rule 12    accept -> ACCEPT
Rule 13    close_server -> CLOSE_SERVER
Rule 14    close -> CLOSE

Terminals, with rules where they appear

ACCEPT               : 12
CLOSE                : 14
CLOSE_CLIENT         : 11
CLOSE_SERVER         : 13
OPEN_CLIENT          : 8
OPEN_SERVER          : 9
SEND                 : 10
error                : 

Nonterminals, with rules where they appear

accept               : 5
close                : 7
close_client         : 4
close_server         : 6
open_client          : 1
open_server          : 2
send                 : 3
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . open_client
    (2) statement -> . open_server
    (3) statement -> . send
    (4) statement -> . close_client
    (5) statement -> . accept
    (6) statement -> . close_server
    (7) statement -> . close
    (8) open_client -> . OPEN_CLIENT
    (9) open_server -> . OPEN_SERVER
    (10) send -> . SEND
    (11) close_client -> . CLOSE_CLIENT
    (12) accept -> . ACCEPT
    (13) close_server -> . CLOSE_SERVER
    (14) close -> . CLOSE

    OPEN_CLIENT     shift and go to state 9
    OPEN_SERVER     shift and go to state 10
    SEND            shift and go to state 11
    CLOSE_CLIENT    shift and go to state 12
    ACCEPT          shift and go to state 13
    CLOSE_SERVER    shift and go to state 14
    CLOSE           shift and go to state 15

    statement                      shift and go to state 1
    open_client                    shift and go to state 2
    open_server                    shift and go to state 3
    send                           shift and go to state 4
    close_client                   shift and go to state 5
    accept                         shift and go to state 6
    close_server                   shift and go to state 7
    close                          shift and go to state 8

state 1

    (0) S' -> statement .



state 2

    (1) statement -> open_client .

    $end            reduce using rule 1 (statement -> open_client .)


state 3

    (2) statement -> open_server .

    $end            reduce using rule 2 (statement -> open_server .)


state 4

    (3) statement -> send .

    $end            reduce using rule 3 (statement -> send .)


state 5

    (4) statement -> close_client .

    $end            reduce using rule 4 (statement -> close_client .)


state 6

    (5) statement -> accept .

    $end            reduce using rule 5 (statement -> accept .)


state 7

    (6) statement -> close_server .

    $end            reduce using rule 6 (statement -> close_server .)


state 8

    (7) statement -> close .

    $end            reduce using rule 7 (statement -> close .)


state 9

    (8) open_client -> OPEN_CLIENT .

    $end            reduce using rule 8 (open_client -> OPEN_CLIENT .)


state 10

    (9) open_server -> OPEN_SERVER .

    $end            reduce using rule 9 (open_server -> OPEN_SERVER .)


state 11

    (10) send -> SEND .

    $end            reduce using rule 10 (send -> SEND .)


state 12

    (11) close_client -> CLOSE_CLIENT .

    $end            reduce using rule 11 (close_client -> CLOSE_CLIENT .)


state 13

    (12) accept -> ACCEPT .

    $end            reduce using rule 12 (accept -> ACCEPT .)


state 14

    (13) close_server -> CLOSE_SERVER .

    $end            reduce using rule 13 (close_server -> CLOSE_SERVER .)


state 15

    (14) close -> CLOSE .

    $end            reduce using rule 14 (close -> CLOSE .)

